src/compiler/parser.out
Grammar:

Rule 0     S' -> program
Rule 1     program -> PROGRAM np_create_global_symTable ID np_program_record ; opt_vars opt_classes opt_funcs main end
Rule 2     np_create_global_symTable -> <empty>
Rule 3     np_program_record -> <empty>
Rule 4     opt_vars -> eps
Rule 5     opt_vars -> vars
Rule 6     opt_classes -> eps
Rule 7     opt_classes -> classes
Rule 8     opt_funcs -> eps
Rule 9     opt_funcs -> functions
Rule 10    vars -> VAR np_create_var_table var_type
Rule 11    np_create_var_table -> <empty>
Rule 12    np_exit_scope -> <empty>
Rule 13    var_type -> compound ; more_var_types
Rule 14    var_type -> simple ; more_var_types
Rule 15    more_var_types -> eps
Rule 16    more_var_types -> var_type
Rule 17    simple -> type ID np_save_id moreids
Rule 18    np_save_id -> <empty>
Rule 19    moreids -> eps
Rule 20    moreids -> , ID np_save_id moreids
Rule 21    compound -> type ID [ CTE_INT two_dim ] more_arr_ids
Rule 22    compound -> CLASS_ID np_class_id ID np_save_id moreids
Rule 23    np_class_id -> <empty>
Rule 24    more_arr_ids -> eps
Rule 25    more_arr_ids -> , ID np_save_id [ CTE_INT two_dim ] more_arr_ids
Rule 26    two_dim -> eps
Rule 27    two_dim -> , CTE_INT
Rule 28    classes -> eps
Rule 29    classes -> CLASS np_prepare_class CLASS_ID np_save_func_id opt_derivation { opt_vars opt_methods } np_exit_scope classes
Rule 30    np_prepare_class -> <empty>
Rule 31    opt_derivation -> eps
Rule 32    opt_derivation -> DERIVES CLASS_ID np_copy_class_record
Rule 33    np_copy_class_record -> <empty>
Rule 34    opt_methods -> eps
Rule 35    opt_methods -> methods
Rule 36    methods -> METHODS : functions
Rule 37    functions -> eps
Rule 38    functions -> function
Rule 39    function -> FUNC func_types ID np_save_func_id ( np_create_var_table opt_param ) opt_vars { body } np_endfunc np_exit_scope functions
Rule 40    np_save_func_id -> <empty>
Rule 41    np_endfunc -> <empty>
Rule 42    func_types -> VOID
Rule 43    func_types -> type
Rule 44    opt_param -> eps
Rule 45    opt_param -> param
Rule 46    moreparams -> eps
Rule 47    moreparams -> , param opt_param
Rule 48    param -> type ID np_save_id np_save_param moreparams
Rule 49    np_save_param -> <empty>
Rule 50    type -> CHAR
Rule 51    type -> FLOAT
Rule 52    type -> INT
Rule 53    body -> opt_stmts
Rule 54    opt_stmts -> eps
Rule 55    opt_stmts -> statements opt_stmts
Rule 56    statements -> function_return
Rule 57    statements -> call_func
Rule 58    statements -> cycles
Rule 59    statements -> conditional
Rule 60    statements -> assign
Rule 61    statements -> read
Rule 62    statements -> print
Rule 63    print -> PRINT ( p_args ) ;
Rule 64    p_args -> expression np_create_print_quad more_args
Rule 65    p_args -> CTE_STRING np_create_print_quad more_args
Rule 66    np_create_print_quad -> <empty>
Rule 67    more_args -> eps
Rule 68    more_args -> , p_args
Rule 69    read -> READ ( r_args ) ;
Rule 70    r_args -> variable np_create_read_quad more_r_args
Rule 71    more_r_args -> eps
Rule 72    more_r_args -> , r_args
Rule 73    np_create_read_quad -> <empty>
Rule 74    assign -> variable = np_push_operator expression ; np_check_assignment_operator
Rule 75    np_check_assignment_operator -> <empty>
Rule 76    conditional -> IF ( expression ) np_if { body } opt_else np_end_if
Rule 77    np_if -> <empty>
Rule 78    np_end_if -> <empty>
Rule 79    opt_else -> eps
Rule 80    opt_else -> ELSE np_else { body }
Rule 81    np_else -> <empty>
Rule 82    cycles -> while_loop
Rule 83    cycles -> for_loop
Rule 84    for_loop -> FOR ( ID = expression TO expression ) { body }
Rule 85    while_loop -> WHILE np_cycle_start ( expression ) np_while { body } np_while_return
Rule 86    np_cycle_start -> <empty>
Rule 87    np_while -> <empty>
Rule 88    np_while_return -> <empty>
Rule 89    call_func -> call_func_body ;
Rule 90    call_func_body -> ID opt_class_func np_func_call ( np_func_ERA opt_call_params ) np_func_gosub
Rule 91    opt_class_func -> eps
Rule 92    opt_class_func -> . ID
Rule 93    np_func_call -> <empty>
Rule 94    np_func_ERA -> <empty>
Rule 95    np_func_gosub -> <empty>
Rule 96    opt_call_params -> eps
Rule 97    opt_call_params -> expression np_func_param more_expressions
Rule 98    np_func_param -> <empty>
Rule 99    more_expressions -> eps
Rule 100   more_expressions -> , opt_call_params
Rule 101   function_return -> RETURN ( expression ) ;
Rule 102   variable -> ID opt_class_func opt_arr_call np_push_var_operand
Rule 103   np_push_var_operand -> <empty>
Rule 104   opt_arr_call -> eps
Rule 105   opt_arr_call -> [ expression opt_dim_call ]
Rule 106   opt_dim_call -> eps
Rule 107   opt_dim_call -> , expression
Rule 108   expression -> t_exp np_check_or_operator exp_or
Rule 109   np_check_or_operator -> <empty>
Rule 110   exp_or -> eps
Rule 111   exp_or -> | np_push_operator expression
Rule 112   np_push_operator -> <empty>
Rule 113   np_push_or_operator -> <empty>
Rule 114   t_exp -> g_exp np_check_and_operator t_and
Rule 115   np_check_and_operator -> <empty>
Rule 116   t_and -> eps
Rule 117   t_and -> & np_push_operator t_exp
Rule 118   g_exp -> m_exp np_check_g_operator g_exp_opers
Rule 119   np_check_g_operator -> <empty>
Rule 120   g_exp_opers -> eps
Rule 121   g_exp_opers -> EQUAL_TO np_push_operator g_exp
Rule 122   g_exp_opers -> NOT_EQUAL_TO np_push_operator g_exp
Rule 123   g_exp_opers -> LESS_OR_EQUAL_TO np_push_operator g_exp
Rule 124   g_exp_opers -> GREATER_OR_EQUAL_TO np_push_operator g_exp
Rule 125   g_exp_opers -> > np_push_operator g_exp
Rule 126   g_exp_opers -> < np_push_operator g_exp
Rule 127   m_exp -> t np_check_m_operator m_opers
Rule 128   np_check_m_operator -> <empty>
Rule 129   m_opers -> eps
Rule 130   m_opers -> - np_push_operator m_exp
Rule 131   m_opers -> + np_push_operator m_exp
Rule 132   t -> f np_check_t_operator t_opers
Rule 133   np_check_t_operator -> <empty>
Rule 134   t_opers -> eps
Rule 135   t_opers -> / np_push_operator t
Rule 136   t_opers -> * np_push_operator t
Rule 137   f -> var_cte
Rule 138   f -> call_func_body
Rule 139   f -> variable
Rule 140   f -> ( np_add_fake_bottom expression ) np_rem_fake_bottom
Rule 141   np_add_fake_bottom -> <empty>
Rule 142   np_rem_fake_bottom -> <empty>
Rule 143   var_cte -> CTE_CHAR
Rule 144   var_cte -> CTE_FLOAT
Rule 145   var_cte -> CTE_INT
Rule 146   main -> MAIN np_save_main_id ( ) opt_vars { body } np_exit_scope
Rule 147   np_save_main_id -> <empty>
Rule 148   end -> <empty>
Rule 149   eps -> <empty>

Terminals, with rules where they appear:

&                    : 117
(                    : 39 63 69 76 84 85 90 101 140 146
)                    : 39 63 69 76 84 85 90 101 140 146
*                    : 136
+                    : 131
,                    : 20 25 27 47 68 72 100 107
-                    : 130
.                    : 92
/                    : 135
:                    : 36
;                    : 1 13 14 63 69 74 89 101
<                    : 126
=                    : 74 84
>                    : 125
CHAR                 : 50
CLASS                : 29
CLASS_ID             : 22 29 32
CTE_CHAR             : 143
CTE_FLOAT            : 144
CTE_INT              : 21 25 27 145
CTE_STRING           : 65
DERIVES              : 32
ELSE                 : 80
EQUAL_TO             : 121
FLOAT                : 51
FOR                  : 84
FUNC                 : 39
GREATER_OR_EQUAL_TO  : 124
ID                   : 1 17 20 21 22 25 39 48 84 90 92 102
IF                   : 76
INT                  : 52
LESS_OR_EQUAL_TO     : 123
MAIN                 : 146
METHODS              : 36
NOT_EQUAL_TO         : 122
PRINT                : 63
PROGRAM              : 1
READ                 : 69
RETURN               : 101
TO                   : 84
VAR                  : 10
VOID                 : 42
WHILE                : 85
[                    : 21 25 105
]                    : 21 25 105
error                : 
{                    : 29 39 76 80 84 85 146
|                    : 111
}                    : 29 39 76 80 84 85 146

Nonterminals, with rules where they appear:

assign               : 60
body                 : 39 76 80 84 85 146
call_func            : 57
call_func_body       : 89 138
classes              : 7 29
compound             : 13
conditional          : 59
cycles               : 58
end                  : 1
eps                  : 4 6 8 15 19 24 26 28 31 34 37 44 46 54 67 71 79 91 96 99 104 106 110 116 120 129 134
exp_or               : 108
expression           : 64 74 76 84 84 85 97 101 105 107 111 140
f                    : 132
for_loop             : 83
func_types           : 39
function             : 38
function_return      : 56
functions            : 9 36 39
g_exp                : 114 121 122 123 124 125 126
g_exp_opers          : 118
m_exp                : 118 130 131
m_opers              : 127
main                 : 1
methods              : 35
more_args            : 64 65
more_arr_ids         : 21 25
more_expressions     : 97
more_r_args          : 70
more_var_types       : 13 14
moreids              : 17 20 22
moreparams           : 48
np_add_fake_bottom   : 140
np_check_and_operator : 114
np_check_assignment_operator : 74
np_check_g_operator  : 118
np_check_m_operator  : 127
np_check_or_operator : 108
np_check_t_operator  : 132
np_class_id          : 22
np_copy_class_record : 32
np_create_global_symTable : 1
np_create_print_quad : 64 65
np_create_read_quad  : 70
np_create_var_table  : 10 39
np_cycle_start       : 85
np_else              : 80
np_end_if            : 76
np_endfunc           : 39
np_exit_scope        : 29 39 146
np_func_ERA          : 90
np_func_call         : 90
np_func_gosub        : 90
np_func_param        : 97
np_if                : 76
np_prepare_class     : 29
np_program_record    : 1
np_push_operator     : 74 111 117 121 122 123 124 125 126 130 131 135 136
np_push_or_operator  : 
np_push_var_operand  : 102
np_rem_fake_bottom   : 140
np_save_func_id      : 29 39
np_save_id           : 17 20 22 25 48
np_save_main_id      : 146
np_save_param        : 48
np_while             : 85
np_while_return      : 85
opt_arr_call         : 102
opt_call_params      : 90 100
opt_class_func       : 90 102
opt_classes          : 1
opt_derivation       : 29
opt_dim_call         : 105
opt_else             : 76
opt_funcs            : 1
opt_methods          : 29
opt_param            : 39 47
opt_stmts            : 53 55
opt_vars             : 1 29 39 146
p_args               : 63 68
param                : 45 47
print                : 62
program              : 0
r_args               : 69 72
read                 : 61
simple               : 14
statements           : 55
t                    : 127 135 136
t_and                : 114
t_exp                : 108 117
t_opers              : 132
two_dim              : 21 25
type                 : 17 21 43 48
var_cte              : 137
var_type             : 10 16
variable             : 70 74 139
vars                 : 5
while_loop           : 82


state 0

    (0) S' -> . program
    (1) program -> . PROGRAM np_create_global_symTable ID np_program_record ; opt_vars opt_classes opt_funcs main end
    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .


state 2

    (1) program -> PROGRAM . np_create_global_symTable ID np_program_record ; opt_vars opt_classes opt_funcs main end
    (2) np_create_global_symTable -> .
    ID              reduce using rule 2 (np_create_global_symTable -> .)

    np_create_global_symTable      shift and go to state 3

state 3

    (1) program -> PROGRAM np_create_global_symTable . ID np_program_record ; opt_vars opt_classes opt_funcs main end
    ID              shift and go to state 4


state 4

    (1) program -> PROGRAM np_create_global_symTable ID . np_program_record ; opt_vars opt_classes opt_funcs main end
    (3) np_program_record -> .
    ;               reduce using rule 3 (np_program_record -> .)

    np_program_record              shift and go to state 5

state 5

    (1) program -> PROGRAM np_create_global_symTable ID np_program_record . ; opt_vars opt_classes opt_funcs main end
    ;               shift and go to state 6


state 6

    (1) program -> PROGRAM np_create_global_symTable ID np_program_record ; . opt_vars opt_classes opt_funcs main end
    (4) opt_vars -> . eps
    (5) opt_vars -> . vars
    (149) eps -> .
    (10) vars -> . VAR np_create_var_table var_type
    CLASS           reduce using rule 149 (eps -> .)
    FUNC            reduce using rule 149 (eps -> .)
    MAIN            reduce using rule 149 (eps -> .)
    VAR             shift and go to state 10

    opt_vars                       shift and go to state 7
    eps                            shift and go to state 8
    vars                           shift and go to state 9

state 7

    (1) program -> PROGRAM np_create_global_symTable ID np_program_record ; opt_vars . opt_classes opt_funcs main end
    (6) opt_classes -> . eps
    (7) opt_classes -> . classes
    (149) eps -> .
    (28) classes -> . eps
    (29) classes -> . CLASS np_prepare_class CLASS_ID np_save_func_id opt_derivation { opt_vars opt_methods } np_exit_scope classes
    FUNC            reduce using rule 149 (eps -> .)
    MAIN            reduce using rule 149 (eps -> .)
    CLASS           shift and go to state 14

    opt_classes                    shift and go to state 11
    eps                            shift and go to state 12
    classes                        shift and go to state 13

state 8

    (4) opt_vars -> eps .
    CLASS           reduce using rule 4 (opt_vars -> eps .)
    FUNC            reduce using rule 4 (opt_vars -> eps .)
    MAIN            reduce using rule 4 (opt_vars -> eps .)
    {               reduce using rule 4 (opt_vars -> eps .)
    METHODS         reduce using rule 4 (opt_vars -> eps .)
    }               reduce using rule 4 (opt_vars -> eps .)


state 9

    (5) opt_vars -> vars .
    CLASS           reduce using rule 5 (opt_vars -> vars .)
    FUNC            reduce using rule 5 (opt_vars -> vars .)
    MAIN            reduce using rule 5 (opt_vars -> vars .)
    {               reduce using rule 5 (opt_vars -> vars .)
    METHODS         reduce using rule 5 (opt_vars -> vars .)
    }               reduce using rule 5 (opt_vars -> vars .)


state 10

    (10) vars -> VAR . np_create_var_table var_type
    (11) np_create_var_table -> .
    CLASS_ID        reduce using rule 11 (np_create_var_table -> .)
    CHAR            reduce using rule 11 (np_create_var_table -> .)
    FLOAT           reduce using rule 11 (np_create_var_table -> .)
    INT             reduce using rule 11 (np_create_var_table -> .)

    np_create_var_table            shift and go to state 15

state 11

    (1) program -> PROGRAM np_create_global_symTable ID np_program_record ; opt_vars opt_classes . opt_funcs main end
    (8) opt_funcs -> . eps
    (9) opt_funcs -> . functions
    (149) eps -> .
    (37) functions -> . eps
    (38) functions -> . function
    (39) function -> . FUNC func_types ID np_save_func_id ( np_create_var_table opt_param ) opt_vars { body } np_endfunc np_exit_scope functions
    MAIN            reduce using rule 149 (eps -> .)
    FUNC            shift and go to state 20

    opt_funcs                      shift and go to state 16
    eps                            shift and go to state 17
    functions                      shift and go to state 18
    function                       shift and go to state 19

state 12

    (6) opt_classes -> eps .
    (28) classes -> eps .
  ! reduce/reduce conflict for FUNC resolved using rule 6 (opt_classes -> eps .)
  ! reduce/reduce conflict for MAIN resolved using rule 6 (opt_classes -> eps .)
    FUNC            reduce using rule 6 (opt_classes -> eps .)
    MAIN            reduce using rule 6 (opt_classes -> eps .)


state 13

    (7) opt_classes -> classes .
    FUNC            reduce using rule 7 (opt_classes -> classes .)
    MAIN            reduce using rule 7 (opt_classes -> classes .)


state 14

    (29) classes -> CLASS . np_prepare_class CLASS_ID np_save_func_id opt_derivation { opt_vars opt_methods } np_exit_scope classes
    (30) np_prepare_class -> .
    CLASS_ID        reduce using rule 30 (np_prepare_class -> .)

    np_prepare_class               shift and go to state 21

state 15

    (10) vars -> VAR np_create_var_table . var_type
    (13) var_type -> . compound ; more_var_types
    (14) var_type -> . simple ; more_var_types
    (21) compound -> . type ID [ CTE_INT two_dim ] more_arr_ids
    (22) compound -> . CLASS_ID np_class_id ID np_save_id moreids
    (17) simple -> . type ID np_save_id moreids
    (50) type -> . CHAR
    (51) type -> . FLOAT
    (52) type -> . INT
    CLASS_ID        shift and go to state 26
    CHAR            shift and go to state 27
    FLOAT           shift and go to state 28
    INT             shift and go to state 29

    var_type                       shift and go to state 22
    compound                       shift and go to state 23
    simple                         shift and go to state 24
    type                           shift and go to state 25

state 16

    (1) program -> PROGRAM np_create_global_symTable ID np_program_record ; opt_vars opt_classes opt_funcs . main end
    (146) main -> . MAIN np_save_main_id ( ) opt_vars { body } np_exit_scope
    MAIN            shift and go to state 31

    main                           shift and go to state 30

state 17

    (8) opt_funcs -> eps .
    (37) functions -> eps .
  ! reduce/reduce conflict for MAIN resolved using rule 8 (opt_funcs -> eps .)
    MAIN            reduce using rule 8 (opt_funcs -> eps .)


state 18

    (9) opt_funcs -> functions .
    MAIN            reduce using rule 9 (opt_funcs -> functions .)


state 19

    (38) functions -> function .
    MAIN            reduce using rule 38 (functions -> function .)
    }               reduce using rule 38 (functions -> function .)


state 20

    (39) function -> FUNC . func_types ID np_save_func_id ( np_create_var_table opt_param ) opt_vars { body } np_endfunc np_exit_scope functions
    (42) func_types -> . VOID
    (43) func_types -> . type
    (50) type -> . CHAR
    (51) type -> . FLOAT
    (52) type -> . INT
    VOID            shift and go to state 33
    CHAR            shift and go to state 27
    FLOAT           shift and go to state 28
    INT             shift and go to state 29

    func_types                     shift and go to state 32
    type                           shift and go to state 34

state 21

    (29) classes -> CLASS np_prepare_class . CLASS_ID np_save_func_id opt_derivation { opt_vars opt_methods } np_exit_scope classes
    CLASS_ID        shift and go to state 35


state 22

    (10) vars -> VAR np_create_var_table var_type .
    CLASS           reduce using rule 10 (vars -> VAR np_create_var_table var_type .)
    FUNC            reduce using rule 10 (vars -> VAR np_create_var_table var_type .)
    MAIN            reduce using rule 10 (vars -> VAR np_create_var_table var_type .)
    {               reduce using rule 10 (vars -> VAR np_create_var_table var_type .)
    METHODS         reduce using rule 10 (vars -> VAR np_create_var_table var_type .)
    }               reduce using rule 10 (vars -> VAR np_create_var_table var_type .)


state 23

    (13) var_type -> compound . ; more_var_types
    ;               shift and go to state 36


state 24

    (14) var_type -> simple . ; more_var_types
    ;               shift and go to state 37


state 25

    (21) compound -> type . ID [ CTE_INT two_dim ] more_arr_ids
    (17) simple -> type . ID np_save_id moreids
    ID              shift and go to state 38


state 26

    (22) compound -> CLASS_ID . np_class_id ID np_save_id moreids
    (23) np_class_id -> .
    ID              reduce using rule 23 (np_class_id -> .)

    np_class_id                    shift and go to state 39

state 27

    (50) type -> CHAR .
    ID              reduce using rule 50 (type -> CHAR .)


state 28

    (51) type -> FLOAT .
    ID              reduce using rule 51 (type -> FLOAT .)


state 29

    (52) type -> INT .
    ID              reduce using rule 52 (type -> INT .)


state 30

    (1) program -> PROGRAM np_create_global_symTable ID np_program_record ; opt_vars opt_classes opt_funcs main . end
    (148) end -> .
    $end            reduce using rule 148 (end -> .)

    end                            shift and go to state 40

state 31

    (146) main -> MAIN . np_save_main_id ( ) opt_vars { body } np_exit_scope
    (147) np_save_main_id -> .
    (               reduce using rule 147 (np_save_main_id -> .)

    np_save_main_id                shift and go to state 41

state 32

    (39) function -> FUNC func_types . ID np_save_func_id ( np_create_var_table opt_param ) opt_vars { body } np_endfunc np_exit_scope functions
    ID              shift and go to state 42


state 33

    (42) func_types -> VOID .
    ID              reduce using rule 42 (func_types -> VOID .)


state 34

    (43) func_types -> type .
    ID              reduce using rule 43 (func_types -> type .)


state 35

    (29) classes -> CLASS np_prepare_class CLASS_ID . np_save_func_id opt_derivation { opt_vars opt_methods } np_exit_scope classes
    (40) np_save_func_id -> .
    DERIVES         reduce using rule 40 (np_save_func_id -> .)
    {               reduce using rule 40 (np_save_func_id -> .)

    np_save_func_id                shift and go to state 43

state 36

    (13) var_type -> compound ; . more_var_types
    (15) more_var_types -> . eps
    (16) more_var_types -> . var_type
    (149) eps -> .
    (13) var_type -> . compound ; more_var_types
    (14) var_type -> . simple ; more_var_types
    (21) compound -> . type ID [ CTE_INT two_dim ] more_arr_ids
    (22) compound -> . CLASS_ID np_class_id ID np_save_id moreids
    (17) simple -> . type ID np_save_id moreids
    (50) type -> . CHAR
    (51) type -> . FLOAT
    (52) type -> . INT
    CLASS           reduce using rule 149 (eps -> .)
    FUNC            reduce using rule 149 (eps -> .)
    MAIN            reduce using rule 149 (eps -> .)
    {               reduce using rule 149 (eps -> .)
    METHODS         reduce using rule 149 (eps -> .)
    }               reduce using rule 149 (eps -> .)
    CLASS_ID        shift and go to state 26
    CHAR            shift and go to state 27
    FLOAT           shift and go to state 28
    INT             shift and go to state 29

    compound                       shift and go to state 23
    more_var_types                 shift and go to state 44
    eps                            shift and go to state 45
    var_type                       shift and go to state 46
    simple                         shift and go to state 24
    type                           shift and go to state 25

state 37

    (14) var_type -> simple ; . more_var_types
    (15) more_var_types -> . eps
    (16) more_var_types -> . var_type
    (149) eps -> .
    (13) var_type -> . compound ; more_var_types
    (14) var_type -> . simple ; more_var_types
    (21) compound -> . type ID [ CTE_INT two_dim ] more_arr_ids
    (22) compound -> . CLASS_ID np_class_id ID np_save_id moreids
    (17) simple -> . type ID np_save_id moreids
    (50) type -> . CHAR
    (51) type -> . FLOAT
    (52) type -> . INT
    CLASS           reduce using rule 149 (eps -> .)
    FUNC            reduce using rule 149 (eps -> .)
    MAIN            reduce using rule 149 (eps -> .)
    {               reduce using rule 149 (eps -> .)
    METHODS         reduce using rule 149 (eps -> .)
    }               reduce using rule 149 (eps -> .)
    CLASS_ID        shift and go to state 26
    CHAR            shift and go to state 27
    FLOAT           shift and go to state 28
    INT             shift and go to state 29

    simple                         shift and go to state 24
    more_var_types                 shift and go to state 47
    eps                            shift and go to state 45
    var_type                       shift and go to state 46
    compound                       shift and go to state 23
    type                           shift and go to state 25

state 38

    (21) compound -> type ID . [ CTE_INT two_dim ] more_arr_ids
    (17) simple -> type ID . np_save_id moreids
    (18) np_save_id -> .
    [               shift and go to state 48
    ,               reduce using rule 18 (np_save_id -> .)
    ;               reduce using rule 18 (np_save_id -> .)

    np_save_id                     shift and go to state 49

state 39

    (22) compound -> CLASS_ID np_class_id . ID np_save_id moreids
    ID              shift and go to state 50


state 40

    (1) program -> PROGRAM np_create_global_symTable ID np_program_record ; opt_vars opt_classes opt_funcs main end .
    $end            reduce using rule 1 (program -> PROGRAM np_create_global_symTable ID np_program_record ; opt_vars opt_classes opt_funcs main end .)


state 41

    (146) main -> MAIN np_save_main_id . ( ) opt_vars { body } np_exit_scope
    (               shift and go to state 51


state 42

    (39) function -> FUNC func_types ID . np_save_func_id ( np_create_var_table opt_param ) opt_vars { body } np_endfunc np_exit_scope functions
    (40) np_save_func_id -> .
    (               reduce using rule 40 (np_save_func_id -> .)

    np_save_func_id                shift and go to state 52

state 43

    (29) classes -> CLASS np_prepare_class CLASS_ID np_save_func_id . opt_derivation { opt_vars opt_methods } np_exit_scope classes
    (31) opt_derivation -> . eps
    (32) opt_derivation -> . DERIVES CLASS_ID np_copy_class_record
    (149) eps -> .
    DERIVES         shift and go to state 55
    {               reduce using rule 149 (eps -> .)

    opt_derivation                 shift and go to state 53
    eps                            shift and go to state 54

state 44

    (13) var_type -> compound ; more_var_types .
    CLASS           reduce using rule 13 (var_type -> compound ; more_var_types .)
    FUNC            reduce using rule 13 (var_type -> compound ; more_var_types .)
    MAIN            reduce using rule 13 (var_type -> compound ; more_var_types .)
    {               reduce using rule 13 (var_type -> compound ; more_var_types .)
    METHODS         reduce using rule 13 (var_type -> compound ; more_var_types .)
    }               reduce using rule 13 (var_type -> compound ; more_var_types .)


state 45

    (15) more_var_types -> eps .
    CLASS           reduce using rule 15 (more_var_types -> eps .)
    FUNC            reduce using rule 15 (more_var_types -> eps .)
    MAIN            reduce using rule 15 (more_var_types -> eps .)
    {               reduce using rule 15 (more_var_types -> eps .)
    METHODS         reduce using rule 15 (more_var_types -> eps .)
    }               reduce using rule 15 (more_var_types -> eps .)


state 46

    (16) more_var_types -> var_type .
    CLASS           reduce using rule 16 (more_var_types -> var_type .)
    FUNC            reduce using rule 16 (more_var_types -> var_type .)
    MAIN            reduce using rule 16 (more_var_types -> var_type .)
    {               reduce using rule 16 (more_var_types -> var_type .)
    METHODS         reduce using rule 16 (more_var_types -> var_type .)
    }               reduce using rule 16 (more_var_types -> var_type .)


state 47

    (14) var_type -> simple ; more_var_types .
    CLASS           reduce using rule 14 (var_type -> simple ; more_var_types .)
    FUNC            reduce using rule 14 (var_type -> simple ; more_var_types .)
    MAIN            reduce using rule 14 (var_type -> simple ; more_var_types .)
    {               reduce using rule 14 (var_type -> simple ; more_var_types .)
    METHODS         reduce using rule 14 (var_type -> simple ; more_var_types .)
    }               reduce using rule 14 (var_type -> simple ; more_var_types .)


state 48

    (21) compound -> type ID [ . CTE_INT two_dim ] more_arr_ids
    CTE_INT         shift and go to state 56


state 49

    (17) simple -> type ID np_save_id . moreids
    (19) moreids -> . eps
    (20) moreids -> . , ID np_save_id moreids
    (149) eps -> .
    ,               shift and go to state 59
    ;               reduce using rule 149 (eps -> .)

    moreids                        shift and go to state 57
    eps                            shift and go to state 58

state 50

    (22) compound -> CLASS_ID np_class_id ID . np_save_id moreids
    (18) np_save_id -> .
    ,               reduce using rule 18 (np_save_id -> .)
    ;               reduce using rule 18 (np_save_id -> .)

    np_save_id                     shift and go to state 60

state 51

    (146) main -> MAIN np_save_main_id ( . ) opt_vars { body } np_exit_scope
    )               shift and go to state 61


state 52

    (39) function -> FUNC func_types ID np_save_func_id . ( np_create_var_table opt_param ) opt_vars { body } np_endfunc np_exit_scope functions
    (               shift and go to state 62


state 53

    (29) classes -> CLASS np_prepare_class CLASS_ID np_save_func_id opt_derivation . { opt_vars opt_methods } np_exit_scope classes
    {               shift and go to state 63


state 54

    (31) opt_derivation -> eps .
    {               reduce using rule 31 (opt_derivation -> eps .)


state 55

    (32) opt_derivation -> DERIVES . CLASS_ID np_copy_class_record
    CLASS_ID        shift and go to state 64


state 56

    (21) compound -> type ID [ CTE_INT . two_dim ] more_arr_ids
    (26) two_dim -> . eps
    (27) two_dim -> . , CTE_INT
    (149) eps -> .
    ,               shift and go to state 67
    ]               reduce using rule 149 (eps -> .)

    two_dim                        shift and go to state 65
    eps                            shift and go to state 66

state 57

    (17) simple -> type ID np_save_id moreids .
    ;               reduce using rule 17 (simple -> type ID np_save_id moreids .)


state 58

    (19) moreids -> eps .
    ;               reduce using rule 19 (moreids -> eps .)


state 59

    (20) moreids -> , . ID np_save_id moreids
    ID              shift and go to state 68


state 60

    (22) compound -> CLASS_ID np_class_id ID np_save_id . moreids
    (19) moreids -> . eps
    (20) moreids -> . , ID np_save_id moreids
    (149) eps -> .
    ,               shift and go to state 59
    ;               reduce using rule 149 (eps -> .)

    moreids                        shift and go to state 69
    eps                            shift and go to state 58

state 61

    (146) main -> MAIN np_save_main_id ( ) . opt_vars { body } np_exit_scope
    (4) opt_vars -> . eps
    (5) opt_vars -> . vars
    (149) eps -> .
    (10) vars -> . VAR np_create_var_table var_type
    {               reduce using rule 149 (eps -> .)
    VAR             shift and go to state 10

    opt_vars                       shift and go to state 70
    eps                            shift and go to state 8
    vars                           shift and go to state 9

state 62

    (39) function -> FUNC func_types ID np_save_func_id ( . np_create_var_table opt_param ) opt_vars { body } np_endfunc np_exit_scope functions
    (11) np_create_var_table -> .
    CHAR            reduce using rule 11 (np_create_var_table -> .)
    FLOAT           reduce using rule 11 (np_create_var_table -> .)
    INT             reduce using rule 11 (np_create_var_table -> .)
    )               reduce using rule 11 (np_create_var_table -> .)

    np_create_var_table            shift and go to state 71

state 63

    (29) classes -> CLASS np_prepare_class CLASS_ID np_save_func_id opt_derivation { . opt_vars opt_methods } np_exit_scope classes
    (4) opt_vars -> . eps
    (5) opt_vars -> . vars
    (149) eps -> .
    (10) vars -> . VAR np_create_var_table var_type
    METHODS         reduce using rule 149 (eps -> .)
    }               reduce using rule 149 (eps -> .)
    VAR             shift and go to state 10

    opt_vars                       shift and go to state 72
    eps                            shift and go to state 8
    vars                           shift and go to state 9

state 64

    (32) opt_derivation -> DERIVES CLASS_ID . np_copy_class_record
    (33) np_copy_class_record -> .
    {               reduce using rule 33 (np_copy_class_record -> .)

    np_copy_class_record           shift and go to state 73

state 65

    (21) compound -> type ID [ CTE_INT two_dim . ] more_arr_ids
    ]               shift and go to state 74


state 66

    (26) two_dim -> eps .
    ]               reduce using rule 26 (two_dim -> eps .)


state 67

    (27) two_dim -> , . CTE_INT
    CTE_INT         shift and go to state 75


state 68

    (20) moreids -> , ID . np_save_id moreids
    (18) np_save_id -> .
    ,               reduce using rule 18 (np_save_id -> .)
    ;               reduce using rule 18 (np_save_id -> .)

    np_save_id                     shift and go to state 76

state 69

    (22) compound -> CLASS_ID np_class_id ID np_save_id moreids .
    ;               reduce using rule 22 (compound -> CLASS_ID np_class_id ID np_save_id moreids .)


state 70

    (146) main -> MAIN np_save_main_id ( ) opt_vars . { body } np_exit_scope
    {               shift and go to state 77


state 71

    (39) function -> FUNC func_types ID np_save_func_id ( np_create_var_table . opt_param ) opt_vars { body } np_endfunc np_exit_scope functions
    (44) opt_param -> . eps
    (45) opt_param -> . param
    (149) eps -> .
    (48) param -> . type ID np_save_id np_save_param moreparams
    (50) type -> . CHAR
    (51) type -> . FLOAT
    (52) type -> . INT
    )               reduce using rule 149 (eps -> .)
    CHAR            shift and go to state 27
    FLOAT           shift and go to state 28
    INT             shift and go to state 29

    opt_param                      shift and go to state 78
    eps                            shift and go to state 79
    param                          shift and go to state 80
    type                           shift and go to state 81

state 72

    (29) classes -> CLASS np_prepare_class CLASS_ID np_save_func_id opt_derivation { opt_vars . opt_methods } np_exit_scope classes
    (34) opt_methods -> . eps
    (35) opt_methods -> . methods
    (149) eps -> .
    (36) methods -> . METHODS : functions
    }               reduce using rule 149 (eps -> .)
    METHODS         shift and go to state 85

    opt_methods                    shift and go to state 82
    eps                            shift and go to state 83
    methods                        shift and go to state 84

state 73

    (32) opt_derivation -> DERIVES CLASS_ID np_copy_class_record .
    {               reduce using rule 32 (opt_derivation -> DERIVES CLASS_ID np_copy_class_record .)


state 74

    (21) compound -> type ID [ CTE_INT two_dim ] . more_arr_ids
    (24) more_arr_ids -> . eps
    (25) more_arr_ids -> . , ID np_save_id [ CTE_INT two_dim ] more_arr_ids
    (149) eps -> .
    ,               shift and go to state 88
    ;               reduce using rule 149 (eps -> .)

    more_arr_ids                   shift and go to state 86
    eps                            shift and go to state 87

state 75

    (27) two_dim -> , CTE_INT .
    ]               reduce using rule 27 (two_dim -> , CTE_INT .)


state 76

    (20) moreids -> , ID np_save_id . moreids
    (19) moreids -> . eps
    (20) moreids -> . , ID np_save_id moreids
    (149) eps -> .
    ,               shift and go to state 59
    ;               reduce using rule 149 (eps -> .)

    moreids                        shift and go to state 89
    eps                            shift and go to state 58

state 77
